feat: Dashboard and Cart Implementation and Integration

--- a/container/index.html
+++ b/container/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <link rel="stylesheet" href="http://localhost:3001/dist/dashboard.css" />
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
